--- a/grafik.html
+++ b/grafik.html
@@ -13,7 +13,7 @@
 			}
 
 			body {
-				background-image: url(https://learningportal.inside-share.bosch.com/PublishingImages/bosch_cloud_keyvisual.jpg);
+				background-image: url(https://connect.bosch.com/files/form/anonymous/api/library/a78f7daa-82d4-47f2-b7f4-3c910f6cca55/document/bd7b4268-81ad-4a28-96ad-674479505c46/thumbnail?renditionKind=largeview);
 				background-size: cover;
 				background-repeat: no-repeat;
 				background-position: center center;
